[package]
name = "honeydew"
version = "1.0.0"
authors = ["Jonathan Vasquez <jon@xyinn.org>"]
edition = "2018"
license = "BSD-2-Clause"
description = "A simple snapshot cleaner for OpenZFS."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33.3"
